# arc

./: .gitignore  Cargo.toml  SPEC.md  cliff.toml  pnpm-lock.yaml  pnpm-workspace.yaml
benches/: README.md
crates/koyori-arc-core/: Cargo.toml
crates/koyori-arc-core/benches/: render_pipeline.rs
crates/koyori-arc-core/benches/fixtures/: 1000_dense.json  1000_sparse.json  100_dense.json  100_sparse.json  2000_dense.json  2000_sparse.json  200_dense.json  200_sparse.json  5000_dense.json  5000_sparse.json  500_dense.json  500_sparse.json  50_dense.json  50_sparse.json
crates/koyori-arc-core/examples/: export_fixtures.rs  preview.rs  write_golden_fixtures.rs
crates/koyori-arc-core/src/: bench_fixtures.rs  graph.rs  layout.rs  lib.rs  progress.rs  render.rs
crates/koyori-arc-core/src/backend/: canvas.rs  command_buffer.rs  mod.rs  native_stub.rs  svg.rs  traits.rs
crates/koyori-arc-core/src/display_list/: build.rs  constants.rs  mod.rs  types.rs
crates/koyori-arc-core/tests/: display_list_tests.rs  wasm.rs
crates/koyori-arc-core/tests/fixtures/canvas_golden/: two_tasks.json
crates/koyori-arc-core/tests/fixtures/ir_golden/: two_tasks.json
scripts/: bench-canvas-crossover.mjs  bench-canvas-replay.js  bench-dom-harness.html  bench-dom.mjs  bench-wasm-boundary.mjs  build-npm.sh  canvas-crossover-gate-integration.test.mjs  canvas-crossover-gate-lib.mjs  canvas-crossover-gate-lib.test.mjs  check-bench-gates.mjs  check-canvas-crossover-gates.mjs  generate-bench-report.mjs  generate-canvas-crossover-report.mjs  run-3layer-bench.sh  run-canvas-crossover-bench.sh
(+19 files in other folders)
